# routes/userRoutes.js
@@ -9,8 +9,8 @@ router.post('/user_login_register', userController.userLogin);
 router.post('/verify_otp', userController.verifyOtp);
 router.post('/update_user', authenticateToken, userController.updateUser);
 router.post('/update_phone_no', authenticateToken,  userController.updatePhoneNumber);
-router.post('/get_contests_matchid',  userController.getAllContestByMatchId);
-router.post('/get_players_by_matchid',  userController.fetchPlayersByMatch);
+router.get('/get_contests_matchid/:matchId',  userController.getAllContestByMatchId);
+router.get('/get_players_by_matchid/:matchId',  userController.fetchPlayersByMatch);
 router.post('/create_team', authenticateToken, userController.createUserTeam);
 router.get('/get_user_teams/:matchId', authenticateToken, userController.getUserTeam);
 router.post('/join_contest', authenticateToken, userController.joinContest);
